Updates the code to newer versions of smartpy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           python-version: '3.x'
           architecture: 'x64'
-      - run: printf '%s\n' 'y' 'y' | bash <(curl -s https://smartpy.io/cli/install.sh)
+      - run: printf '%s\n' 'y' 'y' | bash <(curl -s https://legacy.smartpy.io/cli/install.sh)
       - run: ./compile.sh
       - run: ./test.sh
