--- a/metadata/daoTreasury.json
+++ b/metadata/daoTreasury.json
@@ -8,6 +8,12 @@
   "license": { "name": "MIT", "details": "The MIT License" },
   "interfaces": [ "TZIP-016" ],
   "errors": [
-    { "error": { "string": "TREASURY_NOT_DAO" }, "expansion": { "string": "The account that executed the entry point is not the DAO governance contract" }, "languages": [ "en" ] }
+    {
+      "error": { "string": "TREASURY_NOT_ADMIN" },
+      "expansion": { "string": "The account that executed the entry point is not the contract administrator" },
+      "languages": [ "en" ]
+    },
+    { "error": { "string": "TREASURY_NO_NEW_ADMIN" }, "expansion": { "string": "The new administrator has not been proposed" }, "languages": [ "en" ] },
+    { "error": { "string": "TREASURY_NOT_PROPOSED_ADMIN" }, "expansion": { "string": "The operation can only be executed by the proposed administrator" }, "languages": [ "en" ] }
   ]
 }
